@startuml

title __AIRCRAFTWAR's Class Diagram__\n

  namespace com.example.aircraftwar {
    class com.example.aircraftwar.ConnectActivity {
        # onCreate()
    }
  }
  

  namespace com.example.aircraftwar {
    class com.example.aircraftwar.LogIn {
        # onCreate()
    }
  }
  

  namespace com.example.aircraftwar {
    class com.example.aircraftwar.MainActivity {
        {static} + diffculity : int
        {static} + musicSwitch : boolean
        {static} + scHeight : int
        {static} + scWidth : int
        + LogIn()
        + getScreenHW()
        + onGameStart()
        # onCreate()
    }
  }
  

  namespace com.example.aircraftwar {
    class com.example.aircraftwar.MyServer {
        + MyServer()
    }
  }
  

  namespace com.example.aircraftwar {
    class com.example.aircraftwar.RankActivity {
        + GoToRank()
        # onCreate()
    }
  }
  

  namespace com.example.aircraftwar {
    class com.example.aircraftwar.gameActivity {
        {static} + mh : Handler
        {static} + myBinder : MyBinder
        - TAG : String
        - intent : Intent
        + easyModel()
        + hardModel()
        + musicControl()
        + normalModel()
        # onCreate()
        # onDestroy()
    }
  }
  

  namespace com.example.aircraftwar {
    class com.example.aircraftwar.gameActivity.Connect {
        + onServiceConnected()
        + onServiceDisconnected()
    }
  }
  

  namespace com.example.aircraftwar {
    class com.example.aircraftwar.showRank {
        # onCreate()
    }
  }
  

  com.example.aircraftwar.ConnectActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.aircraftwar.LogIn -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.aircraftwar.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.aircraftwar.RankActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.aircraftwar.gameActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.aircraftwar.gameActivity o-- com.example.aircraftwar.gameActivity.Connect : conn
  com.example.aircraftwar.gameActivity +-down- com.example.aircraftwar.gameActivity.Connect
  com.example.aircraftwar.gameActivity.Connect .up.|> android.content.ServiceConnection
  com.example.aircraftwar.showRank -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
